<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="br.com.tln.personalcard.credenciador.ui.changepassword.ChangePasswordViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/telenetColorSurface"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/telenetColorSurface">

            <ImageView
                android:id="@+id/changePasswordClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onCloseClicked()}"
                android:padding="16dp"
                android:src="@drawable/change_password_close"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/initializationCreatePasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:src="@drawable/lock_icon"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/changePasswordClose" />

            <TextView
                android:id="@+id/initializationCreatePasswordTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/font_regular"
                android:gravity="center_horizontal"
                android:text="@string/change_password_title"
                android:textColor="@color/telenetColorOnSurface"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationCreatePasswordIcon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_current_password"
                style="@style/AppTheme.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/change_password_current_password"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/initializationCreatePasswordTitle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_password_current_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:text="@={viewModel.currentPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_new_password"
                style="@style/AppTheme.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/change_password_new_password"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/change_password_current_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_password_new_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:text="@={viewModel.newPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/change_password_new_password_confirmation"
                style="@style/AppTheme.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/change_password_new_password_conmfirmation"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/change_password_new_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_password_new_password_confirmation_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:maxLength="8"
                    android:text="@={viewModel.newPasswordConfirmation}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_password_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/button_client"
                android:enabled="@{viewModel.valid, default = false}"
                android:fontFamily="@font/font_regular"
                android:onClick="@{() -> viewModel.changePasswordClicked()}"
                android:text="@string/change_password_continue"
                android:textAllCaps="false"
                android:textColor="@color/button_client"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/change_password_end_guideline"
                app:layout_constraintStart_toStartOf="@+id/change_password_start_guideline"
                app:layout_constraintTop_toBottomOf="@+id/change_password_new_password_confirmation"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/change_password_start_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/change_password_end_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>